@@ -1,6 +1,7 @@
 package com.dmdirc.ktirc.sasl
 
 import com.dmdirc.ktirc.IrcClient
+import com.dmdirc.ktirc.SaslConfig
 
 internal interface SaslMechanism {
 
@@ -9,4 +10,12 @@ internal interface SaslMechanism {
 
     fun handleAuthenticationEvent(client: IrcClient, data: ByteArray?)
 
+}
+
+internal fun SaslConfig.createSaslMechanism(): List<SaslMechanism> = mechanisms.mapNotNull {
+    when (it.toUpperCase()) {
+        "EXTERNAL" -> ExternalMechanism()
+        "PLAIN" -> PlainMechanism(this)
+        else -> null
+    }
 }
