@@ -27,14 +27,16 @@ internal class SaslStateTest {
 
     @Test
     fun `gets most preferred client SASL mechanism if none are specified by server`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
 
         assertEquals(mech3, state.getPreferredSaslMechanism(""))
     }
 
     @Test
     fun `gets next preferred client SASL mechanism if one was tried`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
         state.currentMechanism = mech3
 
         assertEquals(mech2, state.getPreferredSaslMechanism(""))
@@ -42,7 +44,8 @@ internal class SaslStateTest {
 
     @Test
     fun `gets no preferred client SASL mechanism if all were tried`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
         state.currentMechanism = mech1
 
         assertNull(state.getPreferredSaslMechanism(""))
@@ -50,35 +53,39 @@ internal class SaslStateTest {
 
     @Test
     fun `gets most preferred client SASL mechanism if the server supports all`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
 
         assertEquals(mech3, state.getPreferredSaslMechanism("mech1,mech3,mech2"))
     }
 
     @Test
     fun `gets most preferred client SASL mechanism if the server supports some`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
 
         assertEquals(mech2, state.getPreferredSaslMechanism("mech2,mech1,other"))
     }
 
     @Test
     fun `gets no preferred client SASL mechanism if the server supports none`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
 
         assertNull(state.getPreferredSaslMechanism("foo,bar,baz"))
     }
 
     @Test
     fun `setting the current mechanism clears the existing state`() {
-        val state = SaslState(mechanisms)
+        val state = SaslState(null)
+        state.mechanisms.addAll(mechanisms)
         state.mechanismState = "in progress"
         state.currentMechanism = mech2
         assertNull(state.mechanismState)
     }
 
     @Test
-    fun `reset clears all state`() = with(SaslState(mechanisms)) {
+    fun `reset clears all state`() = with(SaslState(null)) {
         currentMechanism = mech2
         mechanismState = "in progress"
         saslBuffer = "abcdef"
