@@ -12,7 +12,7 @@ import org.junit.jupiter.api.Test
 
 internal class PlainMechanismTest {
 
-    private val serverState = ServerState("", "", emptyList())
+    private val serverState = ServerState("", "")
     private val ircClient = mock<IrcClient> {
         on { serverState } doReturn serverState
     }
